# Vim

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README  README.md  TODO  link.sh  vimrc
scripts/: check_submodules_present.rb  pkgbuild_submodule_sources.rb
vim/: .VimballRecord  .netrwhist  scripts.vim  source.txt
vim/colors/: ir_black.vim  molokai.vim
vim/doc/: tags
vim/ftplugin/: cucumber.vim  java.vim  markdown.vim
vim/indent/: html.vim
vim/plugin/: swap_parameters.vim
vim/spell/: en.utf-8.add  en.utf-8.add.spl
vim/view/: =+etc=+X11=+xorg.conf=  =+etc=+apt=+sources.list=  =+etc=+conky=+conky.conf=  =+etc=+fstab=  =+etc=+ld.so.conf.d=  =+etc=+samba=+smb.conf=  =+etc=+scalpel=+scalpel.conf=  =+etc=+ssh=+sshd_config=  =+etc=+vsftpd.conf=  =+media=+90FD-C452=+andrew++=+src=+example_simulation=  =+media=+90FD-C452=+andrew++=+src=+scheduler.cpp=  =+media=+Media=+Documents=+.rsync-filter=  =+media=+Media=+Documents=+Mines=+Algorithms=+GitHub=+Homework=+Sets.py=  =+media=+Media=+Documents=+Mines=+Algorithms=+GitHub=+Wars=+Exhastive.h=  =+media=+Media=+Documents=+Mines=+Algorithms=+GitHub=+Wars=+KMapGenerator.py=  =+media=+Media=+Documents=+Mines=+Algorithms=+GitHub=+Wars=+Makefile=  =+media=+Media=+Documents=+Mines=+Algorithms=+GitHub=+Wars=+Matt.h=  =+media=+Media=+Documents=+Mines=+Algorithms=+GitHub=+Wars=+README=  =+media=+Media=+Documents=+Mines=+Algorithms=+GitHub=+Wars=+driver.cpp=  =+media=+Media=+Documents=+Mines=+Algorithms=+GitHub=+Wars=+output-k-graph.txt=  =+media=+Media=+Documents=+Mines=+Algorithms=+GitHub=+Wars=+output-random-graph.txt=  =+media=+Media=+Documents=+Mines=+Algorithms=+GitHub=+Wars=+test.c=  =+media=+Media=+Documents=+Mines=+Algorithms=+Graphs=+src=+City.h=  =+media=+Media=+Documents=+Mines=+Algorithms=+Graphs=+src=+Debug.h=  =+media=+Media=+Documents=+Mines=+Algorithms=+Graphs=+src=+Edge.h=  =+media=+Media=+Documents=+Mines=+Algorithms=+Graphs=+src=+EdgeData=  =+media=+Media=+Documents=+Mines=+Algorithms=+Graphs=+src=+Graph.h=  =+media=+Media=+Documents=+Mines=+Algorithms=+Graphs=+src=+Makefile=  =+media=+Media=+Documents=+Mines=+Algorithms=+Graphs=+src=+c=  =+media=+Media=+Documents=+Mines=+Algorithms=+Graphs=+src=+driver.,c=  =+media=+Media=+Documents=+Mines=+Algorithms=+Graphs=+src=+driver.cpp=  =+media=+Media=+Documents=+Mines=+Algorithms=+Graphs=+src=+problemData=  (+251 more)
(+3 files in other folders)
